report: fix entries and icons alignment (#1162)

--- a/webtau-reactjs/src/report/navigation/NavigationEntry.css
+++ b/webtau-reactjs/src/report/navigation/NavigationEntry.css
@@ -18,6 +18,8 @@
 .navigation-entry {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
     padding: var(--webtau-spacing) var(--webtau-spacing-double);
     border-bottom: 1px var(--webtau-panels-border-color) solid;
     user-select: none;
